New Grief Recovery Site
HTML: Removed 2 "Learn More" buttons, edited text, swapped masthead photo, swapped grid photos & thumbnails, swapped Font Awesome icons, connected calendly and email links.
CSS: Edited colors, minified

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Creative - Start Bootstrap Theme</title>
+  <title>Grief Recovery By Allison</title>
 
   <!-- Font Awesome Icons -->
   <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -30,7 +30,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top">Start Bootstrap</a>
+      <a class="navbar-brand js-scroll-trigger" href="#page-top">Grief Recovery By Allison</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -43,7 +43,7 @@
             <a class="nav-link js-scroll-trigger" href="#services">Services</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a>
+            <a class="nav-link js-scroll-trigger" href="#portfolio">Grief Recovery Method&#0174</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
@@ -58,12 +58,12 @@
     <div class="container h-100">
       <div class="row h-100 align-items-center justify-content-center text-center">
         <div class="col-lg-10 align-self-end">
-          <h1 class="text-uppercase text-white font-weight-bold">Your Favorite Source of Free Bootstrap Themes</h1>
+          <h1 class="text-white font-weight-bold">Rediscover the ability within yourself to transform the quality of your life.</h1>
           <hr class="divider my-4">
         </div>
         <div class="col-lg-8 align-self-baseline">
-          <p class="text-white-75 font-weight-light mb-5">Start Bootstrap can help you build better websites using the Bootstrap framework! Just download a theme and start customizing, no strings attached!</p>
-          <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>
+          <p class="text-white-75 font-weight-light mb-5">The Grief Recovery Method&#0174; is a step-by-step course on how to deal with the grief stemming from a loss. </p>
+          
         </div>
       </div>
     </div>
@@ -74,10 +74,10 @@
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-lg-8 text-center">
-          <h2 class="text-white mt-0">We've got what you need!</h2>
+          <h2 class="text-white mt-0">By learning the tools to face grief, you can move beyond it.</h2>
           <hr class="divider light my-4">
-          <p class="text-white-50 mb-4">Start Bootstrap has everything you need to get your new website up and running in no time! Choose one of our open source, free to download, and easy to use themes! No strings attached!</p>
-          <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Get Started!</a>
+          <p class="text-white-50 mb-4">Allison is a Certified Grief Recovery Specialist&#0174; certified by the Grief Recovery Institute&#0174, who can help you navigate the feelings and grief that arise after unfortunate loss. Through weekly meetings and readings from the Grief Recovery Handbook&#0174, you will uncover the myths about grief, understand what you're feeling is normal, and begin moving forward in your life. Courses are based in the San Fernando Valley, CA and Concord, CA areas. </p>
+          
         </div>
       </div>
     </div>
@@ -91,30 +91,30 @@
       <div class="row">
         <div class="col-lg-3 col-md-6 text-center">
           <div class="mt-5">
-            <i class="fas fa-4x fa-gem text-primary mb-4"></i>
-            <h3 class="h4 mb-2">Sturdy Themes</h3>
-            <p class="text-muted mb-0">Our themes are updated regularly to keep them bug free!</p>
+            <i class="fas fa-4x fa-users text-primary mb-4"></i>
+            <h3 class="h4 mb-2">Support Groups</h3>
+            <p class="text-muted mb-0">8 Weekly Meetings covering the Grief Recovery Method&#0174;</p>
           </div>
         </div>
         <div class="col-lg-3 col-md-6 text-center">
           <div class="mt-5">
-            <i class="fas fa-4x fa-laptop-code text-primary mb-4"></i>
-            <h3 class="h4 mb-2">Up to Date</h3>
-            <p class="text-muted mb-0">All dependencies are kept current to keep things fresh.</p>
+            <i class="fas fa-4x fa-user text-primary mb-4"></i>
+            <h3 class="h4 mb-2">Individual</h3>
+            <p class="text-muted mb-0">Private sessions covering Grief Recovery Method&#0174.</p>
           </div>
         </div>
         <div class="col-lg-3 col-md-6 text-center">
           <div class="mt-5">
-            <i class="fas fa-4x fa-globe text-primary mb-4"></i>
-            <h3 class="h4 mb-2">Ready to Publish</h3>
-            <p class="text-muted mb-0">You can use this design as is, or you can make changes!</p>
+            <i class="fas fa-4x fa-hands-helping text-primary mb-4"></i>
+            <h3 class="h4 mb-2">Informational Sessions</h3>
+            <p class="text-muted mb-0">Learn what the Grief Recovery Method&#0174; is, why it works, and the common misinformation about grief.</p>
           </div>
         </div>
         <div class="col-lg-3 col-md-6 text-center">
           <div class="mt-5">
-            <i class="fas fa-4x fa-heart text-primary mb-4"></i>
-            <h3 class="h4 mb-2">Made with Love</h3>
-            <p class="text-muted mb-0">Is it really open source if it's not made with love?</p>
+            <i class="fas fa-4x fa-volume-up text-primary mb-4"></i>
+            <h3 class="h4 mb-2">Speaking Opportunities</h3>
+            <p class="text-muted mb-0">Is your community facing a major loss or crisis? Book a talk centered on a specific grief topic facing your company, organization or group.</p>
           </div>
         </div>
       </div>
@@ -130,10 +130,10 @@
             <img class="img-fluid" src="img/portfolio/thumbnails/1.jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
-                Category
+                Any Change Can Trigger Grief
               </div>
               <div class="project-name">
-                Project Name
+                Positive and negative changes and milestones including marriage, a new school, parenthood and moving can trigger grief.
               </div>
             </div>
           </a>
@@ -143,10 +143,10 @@
             <img class="img-fluid" src="img/portfolio/thumbnails/2.jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
-                Category
+                Time Doesn't Heal
               </div>
               <div class="project-name">
-                Project Name
+                Do you find yourself crying at the thought of someone you lost months, years or even decades ago?
               </div>
             </div>
           </a>
@@ -156,10 +156,10 @@
             <img class="img-fluid" src="img/portfolio/thumbnails/3.jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
-                Category
+                Pet Loss
               </div>
               <div class="project-name">
-                Project Name
+                Pets live alongside us experiencing much of our day-to-day lifestyle. The sudden absence of a close companion, though not human, can certainly cause substantial grief, even years past.
               </div>
             </div>
           </a>
@@ -169,10 +169,10 @@
             <img class="img-fluid" src="img/portfolio/thumbnails/4.jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
-                Category
+                Missed Opportunities
               </div>
               <div class="project-name">
-                Project Name
+                Experiencing an abortion, miscarriage, infertility, or adoption can yield significant grief from the unfulfilled relationships or milestones that you had hoped to achieve in your life.
               </div>
             </div>
           </a>
@@ -182,10 +182,10 @@
             <img class="img-fluid" src="img/portfolio/thumbnails/5.jpg" alt="">
             <div class="portfolio-box-caption">
               <div class="project-category text-white-50">
-                Category
+                Feelings of Guilt
               </div>
               <div class="project-name">
-                Project Name
+                Grief is heavily stereotyped but can be completely numbing or unemotional. Learn to decipher and navigate these feelings guilt-free.
               </div>
             </div>
           </a>
@@ -195,11 +195,10 @@
             <img class="img-fluid" src="img/portfolio/thumbnails/6.jpg" alt="">
             <div class="portfolio-box-caption p-3">
               <div class="project-category text-white-50">
-                Category
+                Evidence-Based
               </div>
               <div class="project-name">
-                Project Name
-              </div>
+                The Grief Recovery Method&#0174; is an action-based program led by a Certified Grief Recovery Specialist&#0174; giving you the right tools to understand your grief and move forward.              </div>
             </div>
           </a>
         </div>
@@ -210,8 +209,8 @@
   <!-- Call to Action Section -->
   <section class="page-section bg-dark text-white">
     <div class="container text-center">
-      <h2 class="mb-4">Free Download at Start Bootstrap!</h2>
-      <a class="btn btn-light btn-xl" href="https://startbootstrap.com/themes/creative/">Download Now!</a>
+      <h2 class="mb-4">Unresolved grief can inhibit one's capacity for happiness, trust or ability to be present in relationships, work and day-to-day life.</h2>
+      <a class="btn btn-light btn-xl" href="https://calendly.com/griefrecovery/consultation/">Start taking control. Schedule a Consultation.</a>
     </div>
   </section>
 
@@ -220,20 +219,20 @@
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-lg-8 text-center">
-          <h2 class="mt-0">Let's Get In Touch!</h2>
+          <h2 class="mt-0">In order for change, action must occur.</h2>
           <hr class="divider my-4">
-          <p class="text-muted mb-5">Ready to start your next project with us? Give us a call or send us an email and we will get back to you as soon as possible!</p>
+          <p class="text-muted mb-5">Your visiting this site it the first step to your recovery. Take the next step. Learn about my next support group or information session. Send me an email, and I will get back to you as soon as possible.</p>
         </div>
       </div>
       <div class="row">
         <div class="col-lg-4 ml-auto text-center mb-5 mb-lg-0">
           <i class="fas fa-phone fa-3x mb-3 text-muted"></i>
-          <div>+1 (202) 555-0149</div>
+          <div>213-476-0475</div>
         </div>
         <div class="col-lg-4 mr-auto text-center">
           <i class="fas fa-envelope fa-3x mb-3 text-muted"></i>
           <!-- Make sure to change the email address in anchor text AND the link below! -->
-          <a class="d-block" href="mailto:contact@yourwebsite.com">contact@yourwebsite.com</a>
+          <a class="d-block" href="mailto:allisoncminton@gmail.com">allisoncminton@gmail.com</a>
         </div>
       </div>
     </div>
