Edits and Additions to images, css min, html
CSS-Changed white text over orange in bio section and grid background to be less transparent for easier reading.
Images-Added Baby Block Photo - #6
HTML-Added map to bottom of page , edited spelling errors, improved text through text sections, Edited content in grid square #6 from "Tools" to "When Children Grieve",  Swapped phone FA icon for info icon, swapped phone number with Upcoming Info details, added href link to Mosaic. Edited email address from personal to business.

--- a/index - Copy. contains Learn More buttons..html
+++ b/index - Copy. contains Learn More buttons..html
@@ -62,8 +62,8 @@
           <hr class="divider my-4">
         </div>
         <div class="col-lg-8 align-self-baseline">
-          <p class="text-white-75 font-weight-light mb-5">The Grief Recovery Method&#0174; is an evidence-based, step-by-step course on how to deal with the grief stemming from a loss. </p>
-          
+          <p class="text-white-75 font-weight-light mb-5">The Grief Recovery Method&#0174; is a step-by-step course on how to deal with the grief stemming from a loss. </p>
+          <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Learn More</a>
         </div>
       </div>
     </div>
@@ -76,8 +76,8 @@
         <div class="col-lg-8 text-center">
           <h2 class="text-white mt-0">By learning the tools to face grief, you can move beyond it.</h2>
           <hr class="divider light my-4">
-          <p class="text-white-50 mb-4">Allison is a Grief Recovery Specialist&#0174; certified by the Grief Recovery Institute&#0174 who can help you navigate the feelings and grief that arise after unfortunate loss. Through weekly meetings and readings from the Grief Recovery Handbook&#0174, you will uncover the tools necessary to begin moving forward in your life. These six or eight week sessions are based in North Hollywood, CA and Concord, CA areas. </p>
-          
+          <p class="text-white-50 mb-4">Allison is a Certified Grief Recovery Specialist&#0174; certified by the Grief Recovery Institute&#0174, who can help you navigate the feelings and grief that arise after unfortunate loss. Through weekly meetings and readings from the Grief Recovery Handbook&#0174, you will uncover the myths about grief, understand what you're feeling is normal, and begin moving forward in your life. </p>
+          <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Learn More.</a>
         </div>
       </div>
     </div>
@@ -93,7 +93,7 @@
           <div class="mt-5">
             <i class="fas fa-4x fa-users text-primary mb-4"></i>
             <h3 class="h4 mb-2">Support Groups</h3>
-            <p class="text-muted mb-0">Six or Eight Weekly Meetings covering the Grief Recovery Method&#0174;</p>
+            <p class="text-muted mb-0">8 Weekly Meetings covering the Grief Recovery Method&#0174;</p>
           </div>
         </div>
         <div class="col-lg-3 col-md-6 text-center">
@@ -106,7 +106,7 @@
         <div class="col-lg-3 col-md-6 text-center">
           <div class="mt-5">
             <i class="fas fa-4x fa-hands-helping text-primary mb-4"></i>
-            <h3 class="h4 mb-2">Information Sessions</h3>
+            <h3 class="h4 mb-2">Informational Sessions</h3>
             <p class="text-muted mb-0">Learn what the Grief Recovery Method&#0174; is, why it works, and the common misinformation about grief.</p>
           </div>
         </div>
@@ -195,10 +195,10 @@
             <img class="img-fluid" src="img/portfolio/thumbnails/6.jpg" alt="">
             <div class="portfolio-box-caption p-3">
               <div class="project-category text-white-50">
-                Help Children With Loss
+                Evidence-Based
               </div>
               <div class="project-name">
-                Children experience grief from parents' divorcing, moving, changing schools and many more life events. Learn to help your child understand their feelings so they can express themselves in a healthy and responsible manner in our six week When Children Grieve&#0174; Program.   </div>
+                The Grief Recovery Method&#0174; is an action-based program led by a Certified Grief Recovery Specialist&#0174; giving you the right tools to understand your grief and move forward.              </div>
             </div>
           </a>
         </div>
@@ -221,19 +221,18 @@
         <div class="col-lg-8 text-center">
           <h2 class="mt-0">In order for change, action must occur.</h2>
           <hr class="divider my-4">
-          <p class="text-muted mb-5">Your visiting this site is the first step to your recovery. Take the next step. Learn about my next support group or information session. Send me an email, and I will get back to you as soon as possible.</p>
+          <p class="text-muted mb-5">Your visiting this site it the first step to your recovery. Take the next step. Learn about my next support group or information session. Send me an email, and I will get back to you as soon as possible.</p>
         </div>
       </div>
       <div class="row">
         <div class="col-lg-4 ml-auto text-center mb-5 mb-lg-0">
-          <i class="fas fa-info fa-3x mb-3 text-muted"></i>
-          <div>Fall 2019 Support Group Starts Soon at <a class="d-block" href="https://mosaicwellnessshop.com/about/">Mosaic Wellness!</a> Details TBA </div>
+          <i class="fas fa-phone fa-3x mb-3 text-muted"></i>
+          <div>213-476-0475</div>
         </div>
-<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d6603.12212168306!2d-118.39645611639405!3d34.15757030206926!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xef13bbd5840c8f80!2sMosaic%20Wellness%20Shop!5e0!3m2!1sen!2sus!4v1566677723755!5m2!1sen!2sus" width="400" height="300" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
         <div class="col-lg-4 mr-auto text-center">
           <i class="fas fa-envelope fa-3x mb-3 text-muted"></i>
           <!-- Make sure to change the email address in anchor text AND the link below! -->
-          <a class="d-block" href="mailto:info@griefrecoverybyallison.com">info@griefrecoverybyallison.com</a>
+          <a class="d-block" href="mailto:allisoncminton@gmail.com">allisoncminton@gmail.com</a>
         </div>
       </div>
     </div>
