--- a/index.html
+++ b/index.html
@@ -2,11 +2,21 @@
 <html lang="en">
 
 <head>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-146942046-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-146942046-1');
+</script>
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
   <meta name="author" content="">
+  <meta name="keywords" content="Grief Counseling, grief help, grief counselor, grief counselor north hollywood, grief counselor Burbank, grief counseling north hollywood, grief counseling Burbank, grief Orinda, grief counseling Orinda, grief counseling Concord, grief counselor Orinda, grief counselor Concord, grief help Concord, grief help Orinda, grief recovery method, grief recovery method Orinda, grief recovery method Burbank, grief recovery method north hollywood, grief recovery method Concord, child grief, divorce grief, abortion grief, death grief, parent grief, grief classes, grief course, grief assistance, grief specialist, help children Grieve, help child Grieve, parent grief course, hire grief counselor, grief talk, grief speaker, professional grief counselor, professional grief">
 
   <title>Grief Recovery By Allison</title>
 
