--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <div class="col-lg-8 text-center">
           <h2 class="text-white mt-0">By learning the tools to face grief, you can move beyond it.</h2>
           <hr class="divider light my-4">
-          <p class="text-white-50 mb-4">Allison is a Grief Recovery Specialist&#0174; certified by the Grief Recovery Institute&#0174 who can help you navigate the feelings and grief that arise after unfortunate loss. Through weekly meetings and readings from the Grief Recovery Handbook&#0174, you will uncover the tools necessary to begin moving forward in your life. These six or eight week sessions are based in North Hollywood, CA and Concord, CA areas. </p>
+          <p class="text-white-50 mb-4">Allison is a Grief Recovery Specialist&#0174; certified by the Grief Recovery Institute&#0174 who can help you navigate the feelings and grief that arise after unfortunate loss. Through weekly meetings and readings from the Grief Recovery Handbook&#0174, you will uncover the tools necessary to begin moving forward in your life. These four, six or eight week sessions are based in North Hollywood, CA and Concord, CA areas. </p>
           
         </div>
       </div>
@@ -110,7 +110,7 @@
           <div class="mt-5">
             <i class="fas fa-4x fa-user text-primary mb-4"></i>
             <h3 class="h4 mb-2">Individual</h3>
-            <p class="text-muted mb-0">Private sessions covering Grief Recovery Method&#0174.</p>
+            <p class="text-muted mb-0">Private in-home sessions covering Grief Recovery Method&#0174.</p>
           </div>
         </div>
         <div class="col-lg-3 col-md-6 text-center">
@@ -208,7 +208,7 @@
                 Help Children With Loss
               </div>
               <div class="project-name">
-                Children experience grief from parents' divorcing, moving, changing schools and many more life events. Learn to help your child understand their feelings so they can express themselves in a healthy and responsible manner in our six week When Children Grieve&#0174; Program.   </div>
+                Children experience grief from parents' divorcing, moving, changing schools and many more life events. Learn to help your child understand their feelings so they can express themselves in a healthy and responsible manner in our four week When Children Grieve&#0174; Program.   </div>
             </div>
           </a>
         </div>
