--- a/index.html
+++ b/index.html
@@ -80,13 +80,13 @@
   </header>
 
   <!-- About Section -->
-  <section class="page-section bg-primary" id="about">
+  <section class="page-section bg-primary" id="Services">
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-lg-8 text-center">
-          <h2 class="text-white mt-0">By learning the tools to face grief, you can move beyond it.</h2>
+          <h2 class="text-white mt-0">Time Doesn't Heal.</h2>
           <hr class="divider light my-4">
-          <p class="text-white-50 mb-4">Allison is a Grief Recovery Specialist&#0174; certified by the Grief Recovery Institute&#0174 who can help you navigate the feelings and grief that arise after unfortunate loss. Through weekly meetings and readings from the Grief Recovery Handbook&#0174, you will uncover the tools necessary to begin moving forward in your life. These four, six or eight week sessions are based in North Hollywood, CA and Concord, CA areas. </p>
+          <p class="text-white-50 mb-4">Taking action does. Whether it's been days or decades since your loss, your heart can still feel empty. Grief persists even when we try our hardest to pull through everyday routines acting as if we're okay. It can affect our ability to feel, focus, react and overall be present-in work, relationships, school and more. It's never too late to take action toward your grief recovery. The Grief Recovery Method&#0174 is an action program consisting of weekly meetings and readings from the Grief Recovery Handbook&#0174 where you will uncover the information and tools necessary to begin moving forward in your life. Allison is a Certified Grief Recovery Specialist&#0174 who can help you navigate the feelings and grief that arise after unfortunate loss so you can finally heal your broken heart and rediscover your ability to enjoy life once again. </p>
           
         </div>
       </div>
@@ -102,15 +102,15 @@
         <div class="col-lg-3 col-md-6 text-center">
           <div class="mt-5">
             <i class="fas fa-4x fa-users text-primary mb-4"></i>
-            <h3 class="h4 mb-2">Support Groups</h3>
-            <p class="text-muted mb-0">Six or Eight Weekly Meetings covering the Grief Recovery Method&#0174;</p>
+            <h3 class="h4 mb-2" href="https://calendly.com/griefrecovery/consultation/">Support Groups</h3>
+            <p class="text-muted mb-0">Four, Six or Eight Weekly Meetings covering the Grief Recovery Method&#0174;</p>
           </div>
         </div>
         <div class="col-lg-3 col-md-6 text-center">
           <div class="mt-5">
             <i class="fas fa-4x fa-user text-primary mb-4"></i>
             <h3 class="h4 mb-2">Individual</h3>
-            <p class="text-muted mb-0">Private in-home sessions covering Grief Recovery Method&#0174.</p>
+            <p class="text-muted mb-0">Private in-home sessions covering the Grief Recovery Method&#0174.</p>
           </div>
         </div>
         <div class="col-lg-3 col-md-6 text-center">
@@ -205,10 +205,10 @@
             <img class="img-fluid" src="img/portfolio/thumbnails/6.jpg" alt="">
             <div class="portfolio-box-caption p-3">
               <div class="project-category text-white-50">
-                Help Children With Loss
+                Helping Children With Loss
               </div>
               <div class="project-name">
-                Children experience grief from parents' divorcing, moving, changing schools and many more life events. Learn to help your child understand their feelings so they can express themselves in a healthy and responsible manner in our four week When Children Grieve&#0174; Program.   </div>
+                Children experience grief from life events including divorce, moving, changing schools and more. Learn how to support your child appropriately in a four week action program.   </div>
             </div>
           </a>
         </div>
@@ -231,17 +231,70 @@
         <div class="col-lg-8 text-center">
           <h2 class="mt-0">In order for change, action must occur.</h2>
           <hr class="divider my-4">
-          <p class="text-muted mb-5">Your visiting this site is the first step to your recovery. Take the next step. Learn about my next support group or information session. Send me an email, and I will get back to you as soon as possible.</p>
+          <p class="text-muted mb-5">Your visiting this site is the first step to your recovery. Now take the next step. Attend an info session or send me an email, and I will get back to you as soon as possible.</p>
         </div>
       </div>
-      <div class="row">
+      <div class="d-flex justify-content-between">
         <div class="col-lg-4 ml-auto text-center mb-5 mb-lg-0">
-          <i class="fas fa-info fa-3x mb-3 text-muted"></i>
-          <div>Fall 2019 Support Group Starts Soon at <a class="d-block" href="https://mosaicwellnessshop.com/about/">Mosaic Wellness!</a> Details TBA </div>
+          <i class="fas fa-calendar fa-3x mb-3 text-muted"></i>
+          <div> Now Open: "Helping Children With Loss" Support Group 
+		<br> Starts February 29th, 2020 at Hope Therapy Center
+		<br>1201 S. Victory Blvd. Burbank, CA
+		<br>10:00 am - 1:00 pm, 4 meetings, $400 
+		<br> Please request any sliding scale accomodation.
+        </div> 
+<!-- Load Stripe.js on your website. -->
+<script src="https://js.stripe.com/v3"></script>
+
+<!-- Create a button that your customers click to complete their purchase. Customize the styling to suit your branding. -->
+<button
+  style="background-color:#df6d27;color:#FFF;padding:8px 12px;border:0;border-radius:4px;font-size:1em"
+  id="checkout-button-sku_GfYzBPjYzmY3gg"
+  role="link"
+>
+  Register
+</button>
+
+<div id="error-message"></div>
+
+<script>
+(function() {
+  var stripe = Stripe('pk_live_5ICJhB0wwE8ZyaXrGVVk9L0W');
+
+  var checkoutButton = document.getElementById('checkout-button-sku_GfYzBPjYzmY3gg');
+  checkoutButton.addEventListener('click', function () {
+    // When the customer clicks on the button, redirect
+    // them to Checkout.
+    stripe.redirectToCheckout({
+      items: [{sku: 'sku_GfYzBPjYzmY3gg', quantity: 1}],
+
+      // Do not rely on the redirect to the successUrl for fulfilling
+      // purchases, customers may not always reach the success_url after
+      // a successful payment.
+      // Instead use one of the strategies described in
+      // https://stripe.com/docs/payments/checkout/fulfillment
+      successUrl: window.location.protocol + '//griefrecoverybyallison.com/success',
+      cancelUrl: window.location.protocol + '//griefrecoverybyallison.com/canceled',
+    })
+    .then(function (result) {
+      if (result.error) {
+        // If `redirectToCheckout` fails due to a browser or network
+        // error, display the localized error message to your customer.
+        var displayError = document.getElementById('error-message');
+        displayError.textContent = result.error.message;
+      }
+    });
+  });
+})();
+</script>
         </div>
-<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d6603.12212168306!2d-118.39645611639405!3d34.15757030206926!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xef13bbd5840c8f80!2sMosaic%20Wellness%20Shop!5e0!3m2!1sen!2sus!4v1566677723755!5m2!1sen!2sus" width="400" height="300" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+	<!-- iframe Google map embed -->
+	<iframe width="600" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJ8UwubmOVwoARx2QJXMLDI0E&key=AIzaSyBuvvcBQbciJlWjhDObmgZkxOE1RQGe7J8" allowfullscreen></iframe>
+
         <div class="col-lg-4 mr-auto text-center">
           <i class="fas fa-envelope fa-3x mb-3 text-muted"></i>
+	<div> Allison Minton, Certified Grief Recovery Specialist®
+        </div>
           <!-- Make sure to change the email address in anchor text AND the link below! -->
           <a class="d-block" href="mailto:info@griefrecoverybyallison.com">info@griefrecoverybyallison.com</a>
         </div>
@@ -252,7 +305,7 @@
   <!-- Footer -->
   <footer class="bg-light py-5">
     <div class="container">
-      <div class="small text-center text-muted">Copyright &copy; 2019 - Start Bootstrap</div>
+      <div class="small text-center text-muted">Grief Recovery By Allison</div>
     </div>
   </footer>
 
