--- a/index.html
+++ b/index.html
@@ -33,10 +33,15 @@
   <!-- Theme CSS - Includes Bootstrap -->
   <link href="css/creative.min.css" rel="stylesheet">
 
+<!-- MailChimp's Google Retargeting Ads and Pop-up Form Code -->
+<script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/271d629ce09240a30fc12d29f/e6ba217d0bba8060546eb1874.js");</script>
+
+<!-- MailChimp Pop Up Form -->
+<script type="text/javascript" src="//downloads.mailchimp.com/js/signup-forms/popup/unique-methods/embed.js" data-dojo-config="usePlainJson: true, isDebug: false"></script><script type="text/javascript">window.dojoRequire(["mojo/signup-forms/Loader"], function(L) { L.start({"baseUrl":"mc.us16.list-manage.com","uuid":"513029ed41eb8e236fb126d77","lid":"006392d1b2","uniqueMethods":true}) })</script>
+
 </head>
 
-<body id="page-top">
-
+     
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
     <div class="container">
@@ -116,8 +121,10 @@
         <div class="col-lg-3 col-md-6 text-center">
           <div class="mt-5">
             <i class="fas fa-4x fa-hands-helping text-primary mb-4"></i>
-            <h3 class="h4 mb-2">Information Sessions</h3>
-            <p class="text-muted mb-0">Learn what the Grief Recovery Method&#0174; is, why it works, and the common misinformation about grief.</p>
+            
+<h3 class="h4 mb-2">Information Sessions</h3>
+            <a href="https://www.eventbrite.com/o/allison-minton-14758486265">
+<p class="text-muted mb-0">Learn what the Grief Recovery Method&#0174; is, why it works, and the common misinformation about grief.</p></a>
           </div>
         </div>
         <div class="col-lg-3 col-md-6 text-center">
@@ -237,17 +244,15 @@
       <div class="d-flex justify-content-between">
         <div class="col-lg-4 ml-auto text-center mb-5 mb-lg-0">
           <i class="fas fa-calendar fa-3x mb-3 text-muted"></i>
-          <div> Now Open: "Helping Children With Loss" Support Group</a> 
-		<br> Starts February 29th, 2020	
-		<br> 10:00 am - 1:00 pm, 4 Saturdays, $400 
-		<br> Sliding scale accomodation available
-		<a class="btn btn-dark btn-l" href="https://www.eventbrite.com/e/93432819077">Register Here</a>
-		<a class="d-block" href="https://www.eventbrite.com/e/88347063445">Free Information Session Feb 22 @ 10:00 am</a>
+          <div> All in-person meetings are temporarily paused due to COVID-19 stay-in-place measures.
+		<br> 		
+		<br> Can't Wait? 
+		<a class="d-block" href="https://www.griefrecoverymethod.com/our-programs/1-on-1-online-support/search">Click here to connect with an Online Specialist</a>
 
         </div> 
 
         </div>
-	<!-- iframe Google map embed -->
+	<!-- iframe Google Map Embed -->
 	<iframe width="600" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJ8UwubmOVwoARx2QJXMLDI0E&key=AIzaSyBuvvcBQbciJlWjhDObmgZkxOE1RQGe7J8" allowfullscreen></iframe>
 
         <div class="col-lg-4 mr-auto text-center">
@@ -256,6 +261,27 @@
         </div>
           <!-- Make sure to change the email address in anchor text AND the link below! -->
           <a class="d-block" href="mailto:info@griefrecoverybyallison.com">info@griefrecoverybyallison.com</a>
+<br>
+<br> <!-- Begin Mailchimp Signup Form -->
+<link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">
+<style type="text/css">
+	#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
+	/* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
+	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+</style>
+<div id="mc_embed_signup">
+<form action="https://GriefRecoverybyAllison.us16.list-manage.com/subscribe/post?u=513029ed41eb8e236fb126d77&amp;id=006392d1b2" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+    <div id="mc_embed_signup_scroll">
+	<label for="mce-EMAIL">Please subscribe to my monthly newsletter.</label>
+	<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_513029ed41eb8e236fb126d77_006392d1b2" tabindex="-1" value=""></div>
+    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+    </div>
+</form>
+</div>
+
+<!--End mc_embed_signup-->
         </div>
       </div>
     </div>
